[package]
name = "polars_xdt"
version = "0.16.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_xdt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["std", "unstable-locales"] } 
chrono-tz = "0.10.3"
polars = { version = "0.46", features = ["strings", "timezones"]}
polars-ops = { version = "0.46", default-features = false }
polars-arrow = { version = "0.46", default-features = false }

