[package]
name = "polars_xdt"
version = "0.17.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_xdt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.24.0", features = ["derive", "dtype-struct", "dtype-array"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "unstable-locales"] } 
chrono-tz = "0.10.4"
polars = { version = "0.51.0", features = ["strings", "timezones"]}
polars-ops = { version = "0.51.0", default-features = false }
polars-arrow = { version = "0.51.0", default-features = false }

