[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.0"]
build-backend = "maturin"

[project]
name = "polars-xdt"
description = "Time Series Extras (e.g. business day utilities) for Polars"
readme = "README.md"
authors = [
  { name="Marco Gorelli", email="33491632+MarcoGorelli@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"

[project.urls]
"Repository" = "https://github.com/MarcoGorelli/polars-xdt"
"Documentation" = "https://marcogorelli.github.io/polars-xdt-docs/"
"Change Log" = "https://github.com/MarcoGorelli/polars-xdt/releases"
"Issue Tracker" = "https://github.com/MarcoGorelli/polars-xdt/issues"


[tool.maturin]
module-name = "polars_xdt._internal"