[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.0"]
build-backend = "maturin"

[project]
name = "polars-xdt"
description = "Time Series Extras (e.g. business day utilities) for Polars"
readme = "README.md"
authors = [
  { name="Marco Gorelli", email="33491632+MarcoGorelli@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8"

[project.urls]
"Repository" = "https://github.com/MarcoGorelli/polars-xdt"
"Documentation" = "https://marcogorelli.github.io/polars-xdt-docs/"
"Change Log" = "https://github.com/MarcoGorelli/polars-xdt/releases"
"Issue Tracker" = "https://github.com/MarcoGorelli/polars-xdt/issues"


[tool.maturin]
module-name = "polars_xdt._internal"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "D",
]

ignore = [
    "D100",
    "D104",
    "D107",
    "D203",
    "D205",
    "D206",
    "D213",
    "D400",
    "D401",
    "D413",
    "D415",
    "E501",
    "PT011",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "C416",
    "TD003",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [
    "tests",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".ipynb",
    "venv",
]
line-length = 80