[package]
name = "polars_business"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_business"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.3"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars", rev = "0a3df66ce626504e418491cb4b1d31bd3ee7ed6c", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
polars = { git = "https://github.com/pola-rs/polars", rev = "d00a43203b3ade009a5f858f4c698b6a50f5b1e6", version = "0.33.2", features = ["dtype-date"], default-features = false }
polars-time = { git = "https://github.com/pola-rs/polars", rev = "d00a43203b3ade009a5f858f4c698b6a50f5b1e6", version = "0.33.2", features = ["timezones"], default-features = false }
polars-ops = { git = "https://github.com/pola-rs/polars", rev = "d00a43203b3ade009a5f858f4c698b6a50f5b1e6", version = "0.33.2", default-features = false }
