[package]
name = "polars_business"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_business"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = { version = "*", path="../../pyo3-polars/pyo3-polars", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
polars = { version = "*", path="../../polars/crates/polars", features = ["dtype-date"], default-features = false }
polars-time = { version = "*", path="../../polars/crates/polars-time", features = ["timezones"], default-features = false }
polars-ops = { version = "*", path="../../polars/crates/polars-ops", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
