[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.19.9"]
build-backend = "maturin"

[project]
name = "polars-business"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.20"
authors = [
  { name="Marco Gorelli", email="33491632+MarcoGorelli@users.noreply.github.com" },
]
description = "Business day utilities for Polars"
