[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.19.14"]
build-backend = "maturin"

[project]
name = "polars-business"
description = "Business day utilities for Polars"
readme = "README.md"
authors = [
  { name="Marco Gorelli", email="33491632+MarcoGorelli@users.noreply.github.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.3.15"
requires-python = ">=3.8"
