[package]
name = "expression_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "expression_lib"
crate-type = ["cdylib"]

[dependencies]
bdays = "0.1.3"
polars = { workspace = true, default-features = false }
pyo3 = { version = "0.19.0" }
pyo3-polars = { version = "*", path = "../../pyo3-polars", features = ["derive"] }
