[package]
name = "polars_business"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_business"
crate-type = ["cdylib"]

[dependencies]
polars = { workspace = true, features = ["fmt"], default-features = false }
polars-time = { workspace = true, default-features = false }
pyo3 = { version = "0.19.0",  features = ["extension-module"]}
pyo3-polars = { version = "*", path = "../../pyo3-polars", features = ["derive"] }
